Fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,8 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
+    --background-color: 17, 24, 39;
+
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
@@ -88,6 +90,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: -webkit-fill-available;
 }
 
 body {
